<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/margin20"
    tools:context=".activity.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/layoutforget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin20"
            android:text="@string/forget_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/please_enter_valid_mobile_number_to_receive_otp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobilenumber"
                style="@style/EditextStyle"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:padding="@dimen/margin5">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin40"
                android:layout_gravity="center" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginTop="@dimen/margin10"
                android:layout_marginRight="@dimen/margin15"
                card_view:cardBackgroundColor="@color/colorAccent"
                card_view:cardCornerRadius="@dimen/margin10"
                card_view:cardElevation="@dimen/margin5">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sendotp"
                    style="@style/ButtonStyle"
                    android:text="@string/send_otp" />
            </com.google.android.material.card.MaterialCardView>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutcreatepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin15"
            android:text="@string/create_new_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="2"
            android:gravity="center"
            android:text="@string/please_enter_the_otp_number_that_has_been_sent_to_your_mobile" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/enter_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp"
                style="@style/EditextStyle"
                android:drawableLeft="@drawable/ic_one_time_password"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/EditextStyle"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                style="@style/EditextStyle"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="@dimen/margin10"
            card_view:cardElevation="@dimen/margin5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_resetpassword"
                style="@style/ButtonStyle"
                android:text="@string/reset_password" />
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>