<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.registration.LoginActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin150"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginRight="@dimen/margin30"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginTop="@dimen/margin20">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/log_img" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginRight="@dimen/margin30"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle=""/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditextStyle"
                android:id="@+id/et_mobilenumber"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditextStyle"
                android:id="@+id/et_password"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_forget_password"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/cb_rememberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:text="@string/remember_me"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="@dimen/margin10"
            card_view:cardElevation="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonStyle"
                android:id="@+id/btn_login"
                android:text="@string/login"
            />
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginRight="@dimen/margin15"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin30"
                card_view:cardCornerRadius="@dimen/margin5"
                card_view:cardElevation="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginTop="@dimen/margin10"
                android:layout_marginRight="@dimen/margin15">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/facebook"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:drawablePadding="@dimen/margin20"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin30"
                card_view:cardCornerRadius="@dimen/margin5"
                card_view:cardElevation="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_marginTop="@dimen/margin10"
                android:layout_marginRight="@dimen/margin15">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_gmail"
                    android:text="@string/gmail"
                    android:textAllCaps="false"
                    android:background="@color/gmail"
                    android:textColor="@color/white"/>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/tv_signup"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="@dimen/margin5"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:background="@drawable/book3" />
    </LinearLayout>

</LinearLayout>