<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.registration.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginRight="@dimen/margin30"
        android:layout_marginTop="@dimen/margin15"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle=""/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditextStyle"
                android:id="@+id/et_username"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditextStyle"
                android:id="@+id/et_mobilenumber"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditextStyle"
                android:id="@+id/et_email"
                android:drawableLeft="@drawable/ic_envelope"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditextStyle"
                android:id="@+id/et_password"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditextStyle"
                android:id="@+id/et_confirmpassword"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/margin10"
                android:drawableTint="@color/grey"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/colorAccent"
            card_view:cardCornerRadius="@dimen/margin10"
            card_view:cardElevation="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonStyle"
                android:id="@+id/btn_register"
                android:text="@string/register"
                />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:background="@drawable/book3" />
    </LinearLayout>

</LinearLayout>